[FIX] point_of_sale: employee head button seems clickable
Before this commit, the employee head button
seemed to be clickable even when it shouldn't.

It should only appear to be clickable when
there are multiple employees using the same
PoS.

task-2895447

--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -503,6 +503,7 @@ td {
 }
 .pos .oe_status.oe_inactive{
     cursor: default;
+    background: #875A7B !important;
 }
 .pos .oe_status .oe_icon{
     color: white;
