[IMP] loyalty : New design for the rules and reward kanban in program form

--- a/addons/loyalty/views/loyalty_program_views.xml
+++ b/addons/loyalty/views/loyalty_program_views.xml
@@ -4,7 +4,7 @@
         <field name="name">loyalty.program.view.form</field>
         <field name="model">loyalty.program</field>
         <field name="arch" type="xml">
-            <form string="Coupons &amp; Loyalty">
+            <form string="Coupons &amp; Loyalty sfdsfds">
                 <header>
                     <button name="%(loyalty_generate_wizard_action)d" string="Generate Coupons" class="btn-primary" type="action"
                         attrs="{'invisible': [('program_type', '!=', 'coupons')]}"/>
