--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -50,6 +50,18 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
         --o-wsale-card-thumb-fill-mode: cover;
     }
 
+    .o_wsale_filmstip_wrapper {
+        scroll-snap-type: x mandatory;
+
+        .o_wsale_filmstip {
+            transform: translateX(0);
+
+            li {
+                scroll-snap-align: start;
+            }
+        }
+    }
+
     .o_payment_form .card {
         border-radius: 4px !important;
     }
@@ -322,8 +334,8 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
     // mt-* / my-* / mb-* utility classes, but here we need to use the shop max
     // grid gutter width to prevent the grid wrapper to overflow because of its
     // negative margins.
-    margin-top: $grid-gutter-width / 2;
     margin-bottom: $grid-gutter-width / 2;
+    margin-top: $grid-gutter-width / 2;
 }
 
 .oe_cart {
