--- a/addons/sale_loyalty/views/loyalty_program_views.xml
+++ b/addons/sale_loyalty/views/loyalty_program_views.xml
@@ -4,7 +4,7 @@
         id="menu_loyalty_config"
         action="loyalty.loyalty_program_action"
         parent="sale.product_menu_catalog"
-        name="Coupons &amp; Loyalty sale_loyalty/loyalty_program_views.xml"
+        name="Coupons &amp; Loyalty"
         groups="sales_team.group_sale_manager"
         sequence="5"
     />
