--- a/addons/website_sale_loyalty/views/loyalty_program_views.xml
+++ b/addons/website_sale_loyalty/views/loyalty_program_views.xml
@@ -3,7 +3,7 @@
     <menuitem
         id="menu_promotion_type_config"
         action="loyalty.loyalty_program_action"
-        name="Coupons &amp; Loyalty website_sale_loyalty/loyalty_program_views.xml"
+        name="Coupons &amp; Loyalty"
         parent="website_sale.menu_catalog"
         groups="sales_team.group_sale_manager"
         sequence="50"
