--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -154,9 +154,9 @@
                     <field name="date" readonly="1"/>
                     <field name="company_id" groups="base.group_multi_company" optional="hide"/>
                     <field name="journal_id" options='{"no_open":True}' optional="hide"/>
-                    <field name="move_name" string="Journal Entry" optional="show" widget="open_move_widget"/>
+                    <field name="move_name" string="Journal Entry" widget="open_move_widget"/>
                     <field name="account_id" options="{'no_open': True, 'no_create': True}" domain="[('company_id', '=', company_id)]" groups="account.group_account_readonly"/>
-                    <field name="partner_id" optional="hide" attrs="{'readonly':[('account_type','in', ('liability_payable','asset_receivable'))]}"/>
+                    <field name="partner_id" optional="show" attrs="{'readonly':[('account_type','in', ('liability_payable','asset_receivable'))]}"/>
                     <field name="ref" optional="hide"/>
                     <field name="product_id" optional="hide"/>
                     <field name="name" optional="show"/>
@@ -172,8 +172,8 @@
                     <field name="balance" sum="Total Balance" optional="hide" readonly="1"/>
                     <field name="cumulated_balance" optional="hide"/>
                     <field name="matching_number" optional="show"/>
-                    <field name="amount_residual" string="Residual" optional="hide" attrs="{'invisible':[('account_type', 'not in', ('liability_payable','asset_receivable'))]}"/>
-                    <field name="amount_residual_currency" string="Residual in Currency" optional="hide" attrs="{'invisible':['|', ('is_same_currency', '=', True), ('account_type', 'not in', ('liability_payable','asset_receivable'))]}"/>
+                    <field name="amount_residual" sum="Total Residual" string="Residual" optional="hide" attrs="{'invisible':[('is_account_reconcile', '=', False)]}"/>
+                    <field name="amount_residual_currency" sum="Total Residual in Currency" string="Residual in Currency" optional="hide" attrs="{'invisible':['|', ('is_same_currency', '=', True), ('account_type', 'not in', ('liability_payable','asset_receivable'))]}"/>
 
                     <field name="parent_state" invisible="1"/>
                     <field name="account_type" invisible="1"/>
@@ -182,6 +182,7 @@
                     <field name="reconcile_model_id" invisible="1"/>
                     <field name="reconciled" invisible="1"/>
                     <field name="is_same_currency" invisible="1"/>
+                    <field name="is_account_reconcile" invisible="1"/>
                     <groupby name="partner_id">
                         <button name="edit" type="edit" icon="fa-edit" title="Edit"/>
                     </groupby>
@@ -196,7 +197,6 @@
             <field name="inherit_id" ref="account.view_move_line_tree"/>
             <field name="arch" type="xml">
                 <field name="date" position="attributes"><attribute name="optional">hide</attribute></field>
-                <field name="move_name" position="attributes"><attribute name="optional">hide</attribute></field>
                 <field name="tax_tag_ids" position="attributes"><attribute name="optional">show</attribute></field>
             </field>
         </record>
@@ -208,7 +208,6 @@
             <field name="inherit_id" ref="account.view_move_line_tree"/>
             <field name="arch" type="xml">
                 <field name="date" position="attributes"><attribute name="optional">hide</attribute></field>
-                <field name="move_name" position="attributes"><attribute name="optional">hide</attribute></field>
             </field>
         </record>
 
@@ -219,7 +218,6 @@
             <field name="inherit_id" ref="account.view_move_line_tree"/>
             <field name="arch" type="xml">
                 <field name="date" position="attributes"><attribute name="optional">hide</attribute></field>
-                <field name="move_name" position="attributes"><attribute name="optional">hide</attribute></field>
             </field>
         </record>
 
@@ -255,12 +253,10 @@
             <field name="mode">primary</field>
             <field name="inherit_id" ref="account.view_move_line_tree"/>
             <field name="arch" type="xml">
-                <field name="move_name" position="replace"/>
                 <field name="matching_number" position="replace">
                     <field name="tax_line_id" string="Tax"/>
                     <field name="tax_base_amount" sum="Total Base Amount"/>
                     <field name="tax_audit"/>
-                    <field name="move_name"/>
                 </field>
                 <field name="analytic_account_id" position="attributes">
                     <attribute name="optional">hide</attribute>
@@ -273,9 +269,6 @@
                 </field>
                 <field name="journal_id" position="attributes">
                     <attribute name="optional">show</attribute>
-                </field>
-                <field name="move_name" position="attributes">
-                    <attribute name="optional">hide</attribute>
                 </field>
             </field>
         </record>
@@ -318,7 +311,7 @@
                     <separator/>
                     <filter string="To Check" name="to_check" domain="[('move_id.to_check', '=', True)]"/>
                     <separator/>
-                    <filter string="Unreconciled" domain="[('full_reconcile_id', '=', False), ('balance', '!=', 0), ('account_id.reconcile', '=', True)]" help="Journal items where matching number isn't set" name="unreconciled"/>
+                    <filter string="Unreconciled" domain="[('amount_residual', '!=', 0), ('account_id.reconcile', '=', True)]" help="Journal items where matching number isn't set" name="unreconciled"/>
                     <separator/>
                     <filter string="Sales" name="sales" domain="[('journal_id.type', '=', 'sale')]" context="{'default_journal_type': 'sale'}"/>
                     <filter string="Purchases" name="purchases" domain="[('journal_id.type', '=', 'purchase')]" context="{'default_journal_type': 'purchase'}"/>
@@ -463,10 +456,6 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='ref']" position="attributes">
                     <attribute name="optional">show</attribute>
-                </xpath>
-
-                <xpath expr="//field[@name='payment_state']" position="attributes">
-                    <attribute name="optional">hide</attribute>
                 </xpath>
             </field>
         </record>
@@ -660,7 +649,7 @@
                     </div>
                     <sheet>
                         <div name="button_box" class="oe_button_box">
-                            <button name="open_bank_statement_view"
+                            <button name="open_move"
                                     class="oe_stat_button"
                                     icon="fa-bars"
                                     type="object"
