[IMP] mail, *: remove legacy code from activity systray
* = calendar, crm, im_livechat, mass_mailing_sms, note, test_discuss_full,
    test_mail

task-2920645

--- a/addons/note/static/src/scss/note.scss
+++ b/addons/note/static/src/scss/note.scss
@@ -51,11 +51,11 @@
 }
 
 // Quick create notes from systray
-.o_note.o_mail_preview {
+.o_note.o_ActivityMenuView_activityGroup {
     background-color: white;
-    .o_preview_info {
-        .o_preview_title {
-            .o_preview_name {
+    .o_ActivityMenuView_activityGroupInfo {
+        .o_ActivityMenuView_activityGroupTitle {
+            .o_ActivityMenuView_activityGroupName {
                 flex: 1 1 100%;
             }
         }
@@ -73,21 +73,5 @@
     }
     .o_note_input {
         border: none;
-    }
-    .o_note_datetime {
-        .o_datepicker {
-            .o_datepicker_input {
-                float: right;
-                text-align: right;
-                border: none;
-                font-size: 11px;
-            }
-            .o_datepicker_button {
-                display: none;
-            }
-        }
-    }
-    .o_note_set_datetime {
-        color: $text-muted;
     }
 }
